Overflow corrected, whatsapp integration, half of local storage

--- a/src/app/Components/contact/contact.component.css
+++ b/src/app/Components/contact/contact.component.css
@@ -11,3 +11,7 @@
 .contactus {
   margin: 5%;
 }
+
+/* .container{
+  background-color: red;
+} */
